--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
   font-size: 3em;
   text-align: center;
   line-height: 160px;
-  background-image: url('https://imgur.com/a/ejq79Zf');
+  background-image: url('https://i.imgur.com/FCvytGg.jpg');
   color: white;
   https://i.imgur.com/V4DfLeH.jpeg
 }
