--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
   font-size: 3em;
   text-align: center;
   line-height: 160px;
-  background-image: url('https://i.imgur.com/XDS8bbk.jpeg');
+  background-image: url('https://i.imgur.com/duy1mxw.jpg');
   color: white;
   https://i.imgur.com/V4DfLeH.jpeg
 }
