--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@
   https://i.imgur.com/V4DfLeH.jpeg
 }
 .flipCard .card .back {
-  background-image: url('https://i.imgur.com/V4DfLeH.jpeg');
+  background-image: url('https://i.imgur.com/edL1A2m.jpg');
   text-align: center;
   color: black;
   padding-top: 50px;
