--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@
   line-height: 160px;
   background-image: url('https://i.imgur.com/duy1mxw.jpg');
   color: white;
-  https://i.imgur.com/V4DfLeH.jpeg
+  https://i.imgur.com/edL1A2m.jpg
 }
 .flipCard .card .back {
   background-image: url('https://i.imgur.com/edL1A2m.jpg');
