--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
   font-size: 3em;
   text-align: center;
   line-height: 160px;
-  background-image: url('https://i.imgur.com/duy1mxw.jpg');
+  background-image: url('https://i.imgur.com/mdYgduu.png');
   color: white;
   https://i.imgur.com/edL1A2m.jpg
 }
