--- a/style.css
+++ b/style.css
@@ -61,12 +61,12 @@
   font-size: 3em;
   text-align: center;
   line-height: 160px;
-  background-image: url('https://i.imgur.com/mdYgduu.png');
+  background-image: url('https://i.imgur.com/2VfPZOv.png');
   color: white;
   https://i.imgur.com/edL1A2m.jpg
 }
 .flipCard .card .back {
-  background-image: url('https://i.imgur.com/edL1A2m.jpg');
+  background-image: url('https://i.imgur.com/V4DfLeH.jpeg');
   text-align: center;
   color: black;
   padding-top: 50px;
